Package description changed. Composer lock added

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "omgkotofey/omgcatbot",
-  "description": "Simple Telegram bot",
+  "description": "Simple Telegram bot application for various free crypto-tokens earning campaigns",
   "type": "project",
   "license": "MIT",
   "authors": [
